fix: [front-language] ré arranger les données